# to-yt-embed

./: .gitignore  README.md  pyproject.toml  run_to_embed.py  start.sh
src/: GUI.py
src/yt_link_converter/: ytvid_replace.py
tests/: test_main.py
