[project]
name = "yt_link_converter"
version = "0.0.1"
description = "A simple app to convert a YT link to an embed link"
authors = [
    {name = "heko", email = "91366057+hkohko@users.noreply.github.com"},
]
dependencies = [
    "pre-commit>=3.5.0",
    "pysimplegui>=4.60.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
